Card: fix too big margin
It’s the main > doiv that should be 150px from the top. It already has
its 75px margin for the img, the main around needs only the remaining 75px.

--- a/vizitka.css
+++ b/vizitka.css
@@ -8,7 +8,7 @@ body {
 }
 main {
     width: 700px;
-    margin: 150px auto;
+    margin: 75px auto;
     display: flow-root;
     text-align: left;
 }
